--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "node": "20.18.0"
   },
   "dependencies": {
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "http-status-codes": "^2.3.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/http-status-codes": "^1.2.0",
     "@types/node": "^22.7.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
