--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
   },
   "dependencies": {
     "express": "^4.21.1",
-    "http-status-codes": "^2.3.0"
+    "http-status-codes": "^2.3.0",
+    "mongoose": "^8.7.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
     "@types/http-status-codes": "^1.2.0",
+    "@types/mongoose": "^5.11.96",
     "@types/node": "^22.7.7",
+    "bcrypt": "^5.1.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   }
