--- a/package.json
+++ b/package.json
@@ -13,17 +13,21 @@
     "node": "20.18.0"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
     "express": "^4.21.1",
     "http-status-codes": "^2.3.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.7",
     "@types/express": "^5.0.0",
     "@types/http-status-codes": "^1.2.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^22.7.7",
-    "bcrypt": "^5.1.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   }
