--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.2",
-    "node-cron": "^3.0.3"
+    "node-cron": "^3.0.3",
+    "prettier": "^3.3.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -30,6 +31,7 @@
     "@types/mongoose": "^5.11.96",
     "@types/node": "^22.7.7",
     "@types/node-cron": "^3.0.11",
+    "@types/prettier": "^2.7.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   }
