--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "cours",
-  "version": "1.0.0",
-  "description": "Cours back-end",
+  "name": "app-back",
+  "version": "0.0.0",
+  "description": "app de demo pour les cours E4 Full Stack Back",
   "main": "index.js",
   "scripts": {
     "dev": "node -r ts-node/register --watch --env-file=.env src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "format": "prettier 'src/**/*.ts' --write"
   },
   "author": "",
   "license": "ISC",
@@ -16,23 +17,33 @@
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
     "express": "^4.21.1",
+    "http-errors": "^2.0.0",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.2",
-    "node-cron": "^3.0.3",
-    "prettier": "^3.3.3"
+    "mongoose-errors": "^1.1.3",
+    "mongoose-unique-validator": "github:rems2rems/mongoose-unique-validator",
+    "node-cron": "^3.0.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^5.0.0",
+    "@types/http-errors": "^2.0.4",
     "@types/http-status-codes": "^1.2.0",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/mongoose": "^5.11.96",
+    "@types/mongoose-unique-validator": "^1.0.9",
     "@types/node": "^22.7.7",
     "@types/node-cron": "^3.0.11",
-    "@types/prettier": "^2.7.3",
+    "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
+  },
+  "prettier": {
+    "semi": false,
+    "trailingComma": "none",
+    "singleQuote": true,
+    "printWidth": 80
   }
 }
