--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.2",
     "mongoose-errors": "^1.1.3",
-    "mongoose-unique-validator": "github:rems2rems/mongoose-unique-validator",
-    "node-cron": "^3.0.3"
+    "mongoose-unique-validator": "github:rems2rems/mongoose-unique-validator"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -36,6 +35,7 @@
     "@types/mongoose-unique-validator": "^1.0.9",
     "@types/node": "^22.7.7",
     "@types/node-cron": "^3.0.11",
+    "node-cron": "^3.0.3",
     "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
