--- a/package.json
+++ b/package.json
@@ -16,21 +16,29 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
+    "errorhandler": "^1.5.1",
     "express": "^4.21.1",
+    "formator": "^0.0.14",
+    "helmet": "^8.0.0",
     "http-errors": "^2.0.0",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
+    "lusca": "^1.7.0",
     "mongoose": "^8.7.2",
     "mongoose-errors": "^1.1.3",
-    "mongoose-unique-validator": "github:rems2rems/mongoose-unique-validator"
+    "mongoose-unique-validator": "github:rems2rems/mongoose-unique-validator",
+    "node-cron": "^3.0.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.7",
+    "@types/errorhandler": "^1.5.3",
     "@types/express": "^5.0.0",
+    "@types/helmet": "^0.0.48",
     "@types/http-errors": "^2.0.4",
     "@types/http-status-codes": "^1.2.0",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/lusca": "^1.7.5",
     "@types/mongoose": "^5.11.96",
     "@types/mongoose-unique-validator": "^1.0.9",
     "@types/node": "^22.7.7",
