--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "node -r ts-node/register --watch --env-file=.env src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "format": "prettier 'src/**/*.ts' --write"
+    "format": "prettier src/**/*.{js,ts,tsx} --write"
   },
   "author": "",
   "license": "ISC",
@@ -27,7 +27,8 @@
     "mongoose": "^8.7.2",
     "mongoose-errors": "^1.1.3",
     "mongoose-unique-validator": "github:rems2rems/mongoose-unique-validator",
-    "node-cron": "^3.0.3"
+    "node-cron": "^3.0.3",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -49,9 +50,10 @@
     "typescript": "^5.6.3"
   },
   "prettier": {
-    "semi": false,
+    "semi": true,
     "trailingComma": "none",
     "singleQuote": true,
-    "printWidth": 80
+    "printWidth": 120,
+    "tabWidth": 4
   }
 }
