--- a/project/package.json
+++ b/project/package.json
@@ -62,6 +62,7 @@
     "trailingComma": "none",
     "singleQuote": true,
     "printWidth": 120,
-    "tabWidth": 4
+    "tabWidth": 4,
+    "useTabs": true
   }
 }
